objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>This is Purchase Order object.</description>
    <label>Purchase Order</label>
    <nameField>
        <label>PO #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>