objects/Purchase_Order__c/fields/Approved_By_Staff__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>