objects/Purchase_Order__c/fields/Dummy_Picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Picklist_2__c</fullName>
    <description>This is dummy picklist field 2. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Buz Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>