objects/Purchase_Order__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>