objects/Purchase_Order__c/fields/Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created__c</fullName>
    <label>Invoice Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>