objects/Purchase_Order__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>