objects/Purchase_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This is Notes field.</description>
    <label>Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>