objects/Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
                <color>#0B6FCE</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <color>#E27001</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <color>#A845DC</color>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>