objects/Purchase_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>PO_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>