objects/Purchase_Order__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Contact</label>
    <referenceTo>Vendor_Contact__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>