objects/Purchase_Order__c/recordTypes/When_PO_Status_is_Sent.recordType-meta.xml
<RecordType>
    <fullName>When_PO_Status_is_Sent</fullName>
    <active>true</active>
    <description>When PO Status Is Sent PO Record Will Be Read Only</description>
    <label>When PO Status is Sent</label>
</RecordType>