objects/Purchase_Order__c/validationRules/Issue_Date_must_be_less_than_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Date_must_be_less_than_Due_Date</fullName>
    <active>true</active>
    <description>PO Issue date must be less than PO Due Date</description>
    <errorConditionFormula>Issue_Date__c  &gt;  Due_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due date must be greater than Issue Date</errorMessage>
</ValidationRule>