objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Dummy_Text_1__c</columns>
    <columns>Job__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Invoice_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>